Fixed issue with slides overflow

--- a/organizeItClient/src/app/home/home.page.scss
+++ b/organizeItClient/src/app/home/home.page.scss
@@ -24,7 +24,8 @@ p {
 
 .project-description {
   font-size: 1rem;
-  white-space:pre-wrap;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .social-media-icon {
